<resources>
    <string name="app_name">Sharing is Caring</string>
    <string name="item_name">Item Name</string>
    <string name="price_hint">Price per day</string>
    <string name="save_button">Save</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="reservation_hint">Enter Reservation</string>
    <string name="todo">TODO</string>
    <string name="option2">Option 2</string>

</resources>
