<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DetailActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder_imagea"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1" />

    <RadioGroup
        android:id="@+id/attributeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/attributeOption1"
            android:layout_width="173dp"
            android:layout_height="63dp"
            android:text="Option 1"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/attributeOption2"
            android:layout_width="209dp"
            android:layout_height="63dp"
            android:text="@string/option_2" />
    </RadioGroup>

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_button" />
</LinearLayout>
